Changelog
=========


1.0a11
------

* Added styles for izug.meeting add-form
  [eschmutz]

* Added styles for globalstatusmessage in izug.css
  [eschmutz]

* Styling for calendar in tabbedview
  [12.08.2011, florian.sprenger]

* removed css styling for destructive css class and removed backgroundimage for comments
  [eschmutz]

* Fixed specific css for newspaper portlet. 
  [12.08.2011, mathias.leimgruber]

* added specific css for newspaper portlet
  [eschmutz]

* replacing ftw.contentmenu with izug menu in izug layer - import step and
  manual verification of viewlet order required!
  [fsprenger]

* added izug specific browserlayer: izug.basetheme.izug
  [fsprenger]

* added default icon for missing icons, added arrow up and arrow down in sprites
  [fsprenger]

* added opengever specific browserlayer: izug.basetheme.opengever
  [eschmutz]

* adding zug.ch skin layer (not izug profile) when importing izug.basetheme for
  zug.ch. 'Behoerden' is styled now.
  [fsprenger]

* added new sprite icon function-lock.gif
  [eschmutz]

* added sprite function-lock in byline.pt
  [eschmutz]

* added izug edit menu. Import of viewlet.xml required.
  [fsprenger]

* tooltip styling
  [fsprenger]

* izug dashboard styling
  [fsprenger]
  
* Added a new generic setup profile and skin layer for izug
  [fsprenger]

* Moved tabbedview styling from opengever.css to public.css in order to use it
  in izug
  [fsprenger]

* added izug icons in test_icons, changed icon order
  [fsprenger]

* Fixed accesskeys
  [fsprenger]

* Kita-specific styling
  [fsprenger]

* No list-style in shoping cart portlet
  [fsprenger]

* Changed background color for overlays
  [fsprenger]

* Border style for special portlet on zug frontpage
  [fsprenger]

* Fixed contact form column and field widths
  [fsprenger]

* Changed zip label in join_form
  [fsprenger]

* Line-height in lebenslage_summary_view more link
  [fsprenger]

* Make sure portlets dont get a scrollbar if content is too wide
  [fsprenger]
